bk_ida/gccida/c0/output_constant_def
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def/src/varasm.c:3678:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def/src/varasm.c:3730:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)mode, v5); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def/src/obj/varasm.o] Error 1
